Use confirmation dialog in dashboard account

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -11,7 +11,8 @@
 	"account.consuming": "Processament",
 	"account.create_new_db": "Crear nou compte Nuclia DB",
 	"account.db_zone_description": "Escull la zona i el proveïdor de processament que vols fer servir per aquesta compte. De forma predeterminada apareix la zona escollida a l’Account",
-	"account.delete_user_warning": "Segur que vols eliminar l'usuari?",
+	"account.delete_user": "Vols suprimir l'usuari?",
+	"account.delete_user_warning": "Segur que vols eliminar l'usuari {{ username }}?",
 	"account.enhanced_model": "Model millorat",
 	"account.full_name": "Nom i Cognoms",
 	"account.generate_key": "Generar un nou codi",
@@ -23,7 +24,6 @@
 	"account.logotip": "Logotip",
 	"account.manage": "Gestió del compte",
 	"account.manage_account_users": "Gestió dels Usuaris del compte",
-	"account.new_code": "Nou codi",
 	"account.new_token": "Nou Token",
 	"account.nua_key_activity": "Registre d'activitat",
 	"account.nua_key_activity_subtitle": "TODO",
@@ -269,6 +269,8 @@
 	"ontology.type_classification_subtitle": "Tria què es pot classificar amb aquesta familia d'etiquetes.",
 	"ontology.type_labels": "Tipus de etiquetes",
 	"ontology.type_labels_subtitle": "TODO",
+	"pastanaga.cancel": "Cancel · lar",
+	"pastanaga.confirm": "Confirmar",
 	"profile.change_password": "Canviar contrasenya",
 	"profile.edit": "Editant el perfil de: ",
 	"profile.fill_data": "Configura les teves dades abans de començar a descobrir coneixement!",
@@ -396,7 +398,7 @@
 	"stash.create.failure": "Ho sento, alguna cosa definitivament no funciona en aquest moment. Si us plau, poseu-vos en contacte amb el vostre administrador.",
 	"stash.create.zone_description": "Escull la zona i el proveïdor de processament que vols fer servir per aquesta caixa de coneixament. De forma predeterminada apareix la zona escollida a l’Account",
 	"stash.create_service_access": "Crea un nou Service Access",
-	"stash.delete.delete": "Eliminar caixa de coneixement",
+	"stash.delete.delete": "Eliminar caixa de coneixement?",
 	"stash.delete.warning": "Si borres la Caixa de Coneixement {{ kb }} també s'esborraran totes les dades que conté.",
 	"stash.delete_stash": "Eliminar caixa de coneixement",
 	"stash.delete_stash_data": "Elimina la caixa de coneixament i totes les dades que conté",
@@ -427,9 +429,9 @@
 	"stash.publish.confirm": "Publicar la caixa de coneixement significa que es farà pública i serà accessible per qualsevol persona del món. També podrà ser indexada pels cercadors públics tipus Google. ",
 	"stash.publish.publish": "Fer pública la Caixa de Coneixement",
 	"stash.publish.title": "Publicar la caixa de coneixement",
-	"stash.publish.warning": "Si publiques la Caixa de Coneixement {{ kb }} faràs pública tota la informació que conté.",
+	"stash.publish.warning": "Si publiques la Caixa de Coneixement \"{{ kb }}\" faràs pública tota la informació que conté.",
 	"stash.retire.retire": "Fer privada la Caixa de Coneixment ",
-	"stash.retire.warning": "Si despubliques la Caixa de Coneixement {{ kb }} fas privada tota la informació que conté.",
+	"stash.retire.warning": "Si despubliques la Caixa de Coneixement \"{{ kb }}\" fas privada tota la informació que conté.",
 	"stash.search_users": "Afegir un nou usuari",
 	"stash.search_users_add": "Vols afegir aquest nou usuari al compte?",
 	"stash.search_users_description": "Afegeix el correu electrònic del nou usuari",
