Use confirmation dialog in dashboard

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -253,8 +253,10 @@
 	"modal.upload_folder": "Afegeix una carpeta",
 	"ontology.add_ontology": "Afegir etiquetas",
 	"ontology.customize_classification": "Personalitza la classificació.",
+	"ontology.delete_confirm_title": "Elimina la classificació?",
 	"ontology.delete_warning": "Si elimines aquesta família d'etiquetes, perdràs tota la classificació existent",
-	"ontology.duplicated_label": "Ja existeix una etiqueta amb el nom <strong>{{title}}</strong>",
+	"ontology.delete_warning_extra": "Si suprimeixes aquesta classificació, desapareixerà de tots els recursos i suggeriments de cerca",
+	"ontology.duplicated_label": "Ja existeix una etiqueta amb el nom \"{{title}}\"",
 	"ontology.excluding_labels": "TODO",
 	"ontology.invalid_name": "El nom de l'etiqueta no és vàlid",
 	"ontology.manage_labels": "Afegeix, anomena i ordena les etiquetes que formen part d’aquesta família d'etiquetes",
@@ -304,7 +306,9 @@
 	"resource.created_text": "Text creat",
 	"resource.creation_date": "Data de creació del recurs",
 	"resource.default_data": "Dades per defecte",
+	"resource.delete_resource_confirm": "Vols suprimir el document?",
 	"resource.delete_resource_warning": "Si elimines aquest document també s’esborrarà tota la informació processada.",
+	"resource.delete_resources_confirm": "Vols suprimir documents?",
 	"resource.delete_resources_warning": "Si elimines aquests documents també s’esborrarà tota la informació processada.",
 	"resource.description": "Descripció",
 	"resource.description.title": "Descripció",
