--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -299,9 +299,10 @@
 	"modal.upload_folder": "Add a folder",
 	"ontology.add_ontology": "Add label set",
 	"ontology.customize_classification": "Customize the classification.",
+	"ontology.delete_confirm_title": "Delete classification?",
 	"ontology.delete_warning": "Deleting this label set will make you lose all existing classifications",
 	"ontology.delete_warning_extra": "If you delete this classification it will disappear from all resources and search suggestions",
-	"ontology.duplicated_label": "A label named <strong>{{title}}</strong> already exists",
+	"ontology.duplicated_label": "A label named \"{{title}}\" already exists",
 	"ontology.excluding_labels": "Excluding labels",
 	"ontology.invalid_name": "Invalid label name",
 	"ontology.label_classification": "Label classification",
@@ -366,7 +367,9 @@
 	"resource.created_text": "Text created",
 	"resource.creation_date": "Date of creation of the resource",
 	"resource.default_data": "Default data",
+	"resource.delete_resource_confirm": "Delete document?",
 	"resource.delete_resource_warning": "Deleting this document will also delete all processed information.",
+	"resource.delete_resources_confirm": "Delete documents?",
 	"resource.delete_resources_warning": "Deleting these documents will also delete all processed information.",
 	"resource.description": "Description",
 	"resource.description.title": "Description",
