--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -253,8 +253,10 @@
 	"modal.upload_folder": "Añade una carpeta",
 	"ontology.add_ontology": "Añadir etiquetas",
 	"ontology.customize_classification": "Personaliza la clasificación.",
+	"ontology.delete_confirm_title": "¿Eliminar clasificación?",
 	"ontology.delete_warning": "Si eliminas esta família de etiquetas perderás toda la clasificación existente",
-	"ontology.duplicated_label": "Ya existe una etiqueta con el nombre <strong>{{title}}</strong>",
+	"ontology.delete_warning_extra": "Si eliminas esta clasificación desaparecerá de todos los recursos y sugerencias de búsqueda",
+	"ontology.duplicated_label": "Ya existe una etiqueta con el nombre \"{{title}}\"",
 	"ontology.excluding_labels": "TODO",
 	"ontology.invalid_name": "El nombre de la etiqueta no es válido",
 	"ontology.manage_labels": "Añade, nombra y ordena las etiquetas que forman parte de esta família de etiquetas",
@@ -304,7 +306,9 @@
 	"resource.created_text": "Texto creado",
 	"resource.creation_date": "Fecha de creación del recurso",
 	"resource.default_data": "Datos por defecto",
+	"resource.delete_resource_confirm": "¿Eliminar documento?",
 	"resource.delete_resource_warning": "Si eliminas este documento también se borrará toda la información procesada.",
+	"resource.delete_resources_confirm": "¿Eliminar documentos?",
 	"resource.delete_resources_warning": "Si eliminas estos documentos también se borrará toda la información procesada.",
 	"resource.description": "Descripción",
 	"resource.description.title": "Descripción",
