--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -456,6 +456,7 @@
 	"stash.side.sharing": "Compartir",
 	"stash.side.solutions": "Solucions",
 	"stash.side.templates": "Plantilles",
+	"stash.side.trainings": "Entrenaments",
 	"stash.side.users": "Usuaris",
 	"stash.side.view": "Visualització de recursos",
 	"stash.side.widgets": "Widgets",
