--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -552,6 +552,7 @@
 	"stash.side.sharing": "Sharing",
 	"stash.side.solutions": "Solutions",
 	"stash.side.templates": "Templates",
+	"stash.side.trainings": "Trainings",
 	"stash.side.users": "Users",
 	"stash.side.view": "Resources visualization",
 	"stash.side.widgets": "Widgets",
