--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -456,6 +456,7 @@
 	"stash.side.sharing": "Compartir",
 	"stash.side.solutions": "Soluciones",
 	"stash.side.templates": "Plantillas",
+	"stash.side.trainings": "Entrenamientos",
 	"stash.side.users": "Usuarios",
 	"stash.side.view": "Visualización de recursos",
 	"stash.side.widgets": "Widgets",
