[sc-2105] sistema confirmation dialogs (#188)
* Adapt Pastanaga confirmation dialog for Sistema

* Use confirmation dialog in dashboard account

* Fix kb switch dropdown width

* Use confirmation dialog in dashboard

* Use confirmation dialog in signup and recover

* Remove STFConfirm dialog component

* Fix common lib tests

* Prevent console.error in desktop tests

* Prevent console.error in dashboard tests

* Prevent console.error in common tests

* Prevent console.error in manager tests

* Fix toast service tests when running by nx

* Clear nx cache

* Restore nx cache

* Update nx from 14.3.6 to 14.5.6

* Exclude sistema from the tests

Temporary, the time for nx to fix https://github.com/nrwl/nx/issues/10537 by supporting jest 28 (see https://github.com/nrwl/nx/pull/10857)

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -13,7 +13,8 @@
 	"account.create_new_db": "Create a new Nuclia DB account",
 	"account.create_nua_key": "Create new Nuclia understanding API key ",
 	"account.db_zone_description": "Please, select the zone and the processing provider you would like to use for this account (default to the account's zone)",
-	"account.delete_user_warning": "Are you sure to delete this user?",
+	"account.delete_user": "Delete user?",
+	"account.delete_user_warning": "Are you sure you want to delete user {{ username }}?",
 	"account.edit_nua_key": "Edit Nuclia understanding API key ",
 	"account.email_info": "Contact email associated with the key",
 	"account.enhanced_model": "Enhanced model",
@@ -28,7 +29,6 @@
 	"account.logotip": "Logo",
 	"account.manage": "Manage account",
 	"account.manage_account_users": "Account Users management",
-	"account.new_code": "New key",
 	"account.new_token": "New Token",
 	"account.nua_client": "Client name",
 	"account.nua_key_activity": "NU-API key activity log",
@@ -299,9 +299,10 @@
 	"modal.upload_folder": "Add a folder",
 	"ontology.add_ontology": "Add label set",
 	"ontology.customize_classification": "Customize the classification.",
+	"ontology.delete_confirm_title": "Delete classification?",
 	"ontology.delete_warning": "Deleting this label set will make you lose all existing classifications",
 	"ontology.delete_warning_extra": "If you delete this classification it will disappear from all resources and search suggestions",
-	"ontology.duplicated_label": "A label named <strong>{{title}}</strong> already exists",
+	"ontology.duplicated_label": "A label named \"{{title}}\" already exists",
 	"ontology.excluding_labels": "Excluding labels",
 	"ontology.invalid_name": "Invalid label name",
 	"ontology.label_classification": "Label classification",
@@ -317,6 +318,8 @@
 	"ontology.type_classification_subtitle": "Define what this label set can classify.",
 	"ontology.type_labels": "Type of labels",
 	"ontology.type_labels_subtitle": "If you allow the excluding option, you can only choose one of the set options and automatically excluding the rest. ",
+	"pastanaga.cancel": "Cancel",
+	"pastanaga.confirm": "Confirm",
 	"profile.change_password": "Reset password",
 	"profile.edit": "Editing profile from: ",
 	"profile.fill_data": "Please,  fill up some data before start discovering knowledge!",
@@ -364,7 +367,9 @@
 	"resource.created_text": "Text created",
 	"resource.creation_date": "Date of creation of the resource",
 	"resource.default_data": "Default data",
+	"resource.delete_resource_confirm": "Delete document?",
 	"resource.delete_resource_warning": "Deleting this document will also delete all processed information.",
+	"resource.delete_resources_confirm": "Delete documents?",
 	"resource.delete_resources_warning": "Deleting these documents will also delete all processed information.",
 	"resource.description": "Description",
 	"resource.description.title": "Description",
@@ -475,7 +480,7 @@
 	"stash.create.languages-help": "Choose if the information that will be uploaded to the KB will be in one or more languages. If it is only one, select which one for better accuracy.",
 	"stash.create.zone_description": "Please, select the zone and the processing provider you would like to use for this knowledge box (default to the account's zone)",
 	"stash.create_service_access": "Create a new Service Access",
-	"stash.delete.delete": "Delete knowledge box",
+	"stash.delete.delete": "Delete knowledge box?",
 	"stash.delete.error": "Error when creating the knowledge box",
 	"stash.delete.warning": "If you delete the Knowledge Box {{ kb }} all data in it will be also deleted",
 	"stash.delete_stash": "Delete knowledge box",
@@ -510,10 +515,10 @@
 	"stash.publish.error": "Error when publishing the Knowledge Box",
 	"stash.publish.publish": "Publish Knowledge Box",
 	"stash.publish.title": "Publish knowledge box",
-	"stash.publish.warning": "If you publish the {{ kb }} Knowledge Box, all the information in it will be public.",
+	"stash.publish.warning": "If you publish the \"{{ kb }}\" Knowledge Box, all the information in it will be public.",
 	"stash.retire.error": "Error when unpublishing the Knowledge Box",
 	"stash.retire.retire": "Make the Knowledge Box private",
-	"stash.retire.warning": "If you unpublish the {{ kb }} Knowledge Box, all the information in it will private.",
+	"stash.retire.warning": "If you unpublish the \"{{ kb }}\" Knowledge Box, all the information in it will be private.",
 	"stash.search_users": "Add a new user",
 	"stash.search_users_add": "Do you really want to add this user to the account? ",
 	"stash.search_users_description": "Add new user's email",
