--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -11,7 +11,8 @@
 	"account.consuming": "Procesamiento",
 	"account.create_new_db": "Crear nueva cuenta de Nuclia DB",
 	"account.db_zone_description": "Elige la zona y el proveedor de procesamiento que quieres utilizar para esta cuenta. De forma predeterminada aparece la zona escogida en el Account",
-	"account.delete_user_warning": "¿Seguro que quieres eliminar este usuario?",
+	"account.delete_user": "¿Borrar usuario?",
+	"account.delete_user_warning": "¿Seguro que quieres eliminar el usuario {{ username }}?",
 	"account.enhanced_model": "Modelo mejorado",
 	"account.full_name": "Nombre y Apellidos",
 	"account.generate_key": "Generar un nuevo código",
@@ -23,7 +24,6 @@
 	"account.logotip": "Logotipo",
 	"account.manage": "Gestión de la cuenta",
 	"account.manage_account_users": "Gestión de los Usuarios de la cuenta",
-	"account.new_code": "Nuevo código",
 	"account.new_token": "Nuevo Token",
 	"account.nua_key_activity": "Registro de actividad",
 	"account.nua_key_activity_subtitle": "TODO",
@@ -253,8 +253,10 @@
 	"modal.upload_folder": "Añade una carpeta",
 	"ontology.add_ontology": "Añadir etiquetas",
 	"ontology.customize_classification": "Personaliza la clasificación.",
+	"ontology.delete_confirm_title": "¿Eliminar clasificación?",
 	"ontology.delete_warning": "Si eliminas esta família de etiquetas perderás toda la clasificación existente",
-	"ontology.duplicated_label": "Ya existe una etiqueta con el nombre <strong>{{title}}</strong>",
+	"ontology.delete_warning_extra": "Si eliminas esta clasificación desaparecerá de todos los recursos y sugerencias de búsqueda",
+	"ontology.duplicated_label": "Ya existe una etiqueta con el nombre \"{{title}}\"",
 	"ontology.excluding_labels": "TODO",
 	"ontology.invalid_name": "El nombre de la etiqueta no es válido",
 	"ontology.manage_labels": "Añade, nombra y ordena las etiquetas que forman parte de esta família de etiquetas",
@@ -269,6 +271,8 @@
 	"ontology.type_classification_subtitle": "Escoge qué puede ser clasificado con esta familia de etiquetas.",
 	"ontology.type_labels": "Tipo de etiquetas",
 	"ontology.type_labels_subtitle": "TODO",
+	"pastanaga.cancel": "Cancelar",
+	"pastanaga.confirm": "Confirmar",
 	"profile.change_password": "Cambiar contraseña",
 	"profile.edit": "Editando el perfil de: ",
 	"profile.fill_data": "Por favor,  configura tus datos antes de empezar a descubrir conocimiento",
@@ -302,7 +306,9 @@
 	"resource.created_text": "Texto creado",
 	"resource.creation_date": "Fecha de creación del recurso",
 	"resource.default_data": "Datos por defecto",
+	"resource.delete_resource_confirm": "¿Eliminar documento?",
 	"resource.delete_resource_warning": "Si eliminas este documento también se borrará toda la información procesada.",
+	"resource.delete_resources_confirm": "¿Eliminar documentos?",
 	"resource.delete_resources_warning": "Si eliminas estos documentos también se borrará toda la información procesada.",
 	"resource.description": "Descripción",
 	"resource.description.title": "Descripción",
@@ -396,7 +402,7 @@
 	"stash.create.failure": "Lo siento, definitivamente algo anda mal en este momento. Por favor, póngase en contacto con su administrador.",
 	"stash.create.zone_description": "Elige la zona y el proveedor de procesamiento que quieres utilizar para esta caja de conocimiento. De forma predeterminada aparece la zona escogida en el Account",
 	"stash.create_service_access": "Crea un nuevo Service Access",
-	"stash.delete.delete": "Eliminar caja de conocimiento",
+	"stash.delete.delete": "¿Eliminar caja de conocimiento?",
 	"stash.delete.warning": "Si eliminas la Caja de Conocimiento {{ kb }} también se eliminaran todos los datos que contenga",
 	"stash.delete_stash": "Borrar caja de conocimiento",
 	"stash.delete_stash_data": "Elimina la caja de conocimiento y todos los datos que contiene",
@@ -427,9 +433,9 @@
 	"stash.publish.confirm": "Publicar una caja de conocimiento significa que será accesible para cualquier persona en el mundo. También significa que podría ser indexada por motores de búsqueda públicos como Google.",
 	"stash.publish.publish": "Publicar la Caja de Conocimiento",
 	"stash.publish.title": "Publicar la caja de conocimiento",
-	"stash.publish.warning": "Si publicas la Caja de Conocimiento {{ kb }} toda la información que contiene se hará pública.",
+	"stash.publish.warning": "Si publicas la Caja de Conocimiento \"{{ kb }}\" toda la información que contiene se hará pública.",
 	"stash.retire.retire": "Hacer privada la Caja de Conocimiento",
-	"stash.retire.warning": "Si despublicas la Caja de Conocimiento {{ kb }}, toda la inforamción que contiene será privada. ",
+	"stash.retire.warning": "Si despublicas la Caja de Conocimiento \"{{ kb }}\", toda la información que contiene será privada. ",
 	"stash.search_users": "Añadir un nuevo usuario",
 	"stash.search_users_add": "¿Quieres añadir el usuario a la cuenta?",
 	"stash.search_users_description": "Añade el correo electrónico del nuevo usuario",
