[sc-2049] New menu item for processing page (#189)
* Remove old unused code

* Add icon to Sistema

* [sc-2049] New menu item for processing page

* Add translations

* Fix error

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -446,7 +446,6 @@
 	"search.title.other_results": "Other results",
 	"search.title.results": "Closest results",
 	"search.title.semanticresults": "Semantic result",
-	"search.top_insights": "Top Insights",
 	"search.type_of_document": "Type of document",
 	"search.type_of_results": "Type of results",
 	"searchbar.help": "Search",
@@ -494,8 +493,6 @@
 	"stash.enable_stash_email": "Enable email",
 	"stash.entities.custom_entities": "Personalized named entities",
 	"stash.entities.named_entities": "Detected named entites",
-	"stash.filter_options": "Filter options",
-	"stash.filter_options_description": "Please, select the options you want to be visible in the filters tab. \nSelected options will be used to narrow search results.",
 	"stash.home.recent_added": "New content",
 	"stash.home.tags.title": "Tag distribution representation",
 	"stash.home.tags.total": "total tags",
@@ -560,6 +557,7 @@
 	"stash.side.sharing": "Sharing",
 	"stash.side.solutions": "Solutions",
 	"stash.side.templates": "Templates",
+	"stash.side.trainings": "Trainings",
 	"stash.side.users": "Users",
 	"stash.side.view": "Resources visualization",
 	"stash.side.widgets": "Widgets",
@@ -569,7 +567,6 @@
 	"stash.state.published": "Published",
 	"stash.stats": "Data",
 	"stash.title": "Title of the box",
-	"stash.top_insights_description": "Please, select the 4 essential insights you would like have in the filters menu.",
 	"stash.upload_data": "Upload data",
 	"stash.upload_to_search": "Upload data to start using the AI-search engine.",
 	"stash.users.role": "Role",
