--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -415,8 +415,6 @@
 	"stash.enable_stash_email": "Habilitar correo electrónico",
 	"stash.entities.custom_entities": "Entidades personalizadas",
 	"stash.entities.named_entities": "Entidades detectadas",
-	"stash.filter_options": "Opciones de filtrado",
-	"stash.filter_options_description": "Elige las opciones visibles en la pestaña de filtros para reducir los resultados de búsqueda",
 	"stash.home.recent_added": "Nuevos contenidos",
 	"stash.home.tags.title": "Gráfica de distribución de tags",
 	"stash.home.tags.total": "tags en total",
@@ -464,6 +462,7 @@
 	"stash.side.sharing": "Compartir",
 	"stash.side.solutions": "Soluciones",
 	"stash.side.templates": "Plantillas",
+	"stash.side.trainings": "Entrenamientos",
 	"stash.side.users": "Usuarios",
 	"stash.side.view": "Visualización de recursos",
 	"stash.side.widgets": "Widgets",
@@ -471,7 +470,6 @@
 	"stash.state": "Estado",
 	"stash.stats": "Datos",
 	"stash.title": "Título de la caja",
-	"stash.top_insights_description": "Elige las cuatro entidades más esenciales disponibles en el menú de filtros",
 	"stash.upload_data": "Subir datos",
 	"stash.upload_to_search": "Sube datos para empezar a utilizar el motor de búsqueda.",
 	"stash.users.role": "Rol",
