--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -415,8 +415,6 @@
 	"stash.enable_stash_email": "Habilitar correu electrònic",
 	"stash.entities.custom_entities": "Entitats personalitzades",
 	"stash.entities.named_entities": "Entitats detectades",
-	"stash.filter_options": "Opcions de filtratge",
-	"stash.filter_options_description": "Escull les opcions visibles a la pestanya de filtres per a reduïr els resultats de cerca",
 	"stash.home.recent_added": "Continguts nous",
 	"stash.home.tags.title": "Gràfica de distribució de tags",
 	"stash.home.tags.total": "tags en total",
@@ -464,6 +462,7 @@
 	"stash.side.sharing": "Compartir",
 	"stash.side.solutions": "Solucions",
 	"stash.side.templates": "Plantilles",
+	"stash.side.trainings": "Entrenaments",
 	"stash.side.users": "Usuaris",
 	"stash.side.view": "Visualització de recursos",
 	"stash.side.widgets": "Widgets",
@@ -471,7 +470,6 @@
 	"stash.state": "Estat",
 	"stash.stats": "Dades",
 	"stash.title": "Títol de la caixa",
-	"stash.top_insights_description": "Escull les quatre entitats més essencials disponibles al menú de filtres",
 	"stash.upload_data": "Pujar dades",
 	"stash.upload_to_search": "Puja dades per comença a utilitzar el motor de cerca.",
 	"stash.users.role": "Rol",
