--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -25,9 +25,12 @@
 	"account.manage": "Gestión de la cuenta",
 	"account.manage_account_users": "Gestión de los Usuarios de la cuenta",
 	"account.new_token": "Nuevo Token",
+	"account.nua_client": "Nombre del cliente",
 	"account.nua_key_activity": "Registro de actividad",
 	"account.nua_key_activity_subtitle": "TODO",
 	"account.nua_key_activity_title": "TODO",
+	"account.nua_key_delete": "Eliminar la clave API de comprensión de Nuccia",
+	"account.nua_key_delete_warning": "Al eliminar esta clave, se perderán todos los trabajos en curso (si los hay).",
 	"account.nua_webhook": "Webhook URL",
 	"account.nua_webhook.help": "Una vez que se procesan sus datos, el resultado se publica en esta URL",
 	"account.related_kbs": "Cajas de conocimiento de la cuenta",
