Adjust Google translations

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -29,7 +29,7 @@
 	"account.nua_key_activity": "Registre d'activitat",
 	"account.nua_key_activity_subtitle": "TODO",
 	"account.nua_key_activity_title": "TODO",
-	"account.nua_key_delete": "Suprimeix la clau de l'API Nuclia Understanding",
+	"account.nua_key_delete": "Suprimir la clau de la Nuclia Understanding API",
 	"account.nua_key_delete_warning": "Si suprimiu aquesta clau, es perdran tots els treballs en curs (si n'hi ha).",
 	"account.nua_webhook": "Webhook URL",
 	"account.nua_webhook.help": "Un cop processades les teves dades, el resultat es publica a aquest URL",
@@ -256,7 +256,7 @@
 	"modal.upload_folder": "Afegeix una carpeta",
 	"ontology.add_ontology": "Afegir etiquetas",
 	"ontology.customize_classification": "Personalitza la classificació.",
-	"ontology.delete_confirm_title": "Elimina la classificació?",
+	"ontology.delete_confirm_title": "Eliminar la classificació?",
 	"ontology.delete_warning": "Si elimines aquesta família d'etiquetes, perdràs tota la classificació existent",
 	"ontology.delete_warning_extra": "Si suprimeixes aquesta classificació, desapareixerà de tots els recursos i suggeriments de cerca",
 	"ontology.duplicated_label": "Ja existeix una etiqueta amb el nom \"{{title}}\"",
@@ -274,7 +274,7 @@
 	"ontology.type_classification_subtitle": "Tria què es pot classificar amb aquesta familia d'etiquetes.",
 	"ontology.type_labels": "Tipus de etiquetes",
 	"ontology.type_labels_subtitle": "TODO",
-	"pastanaga.cancel": "Cancel · lar",
+	"pastanaga.cancel": "Cancel·lar",
 	"pastanaga.confirm": "Confirmar",
 	"profile.change_password": "Canviar contrasenya",
 	"profile.edit": "Editant el perfil de: ",
