--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -11,7 +11,7 @@
 	"account.consuming": "Procesamiento",
 	"account.create_new_db": "Crear nueva cuenta de Nuclia DB",
 	"account.db_zone_description": "Elige la zona y el proveedor de procesamiento que quieres utilizar para esta cuenta. De forma predeterminada aparece la zona escogida en el Account",
-	"account.delete_user": "¿Borrar usuario?",
+	"account.delete_user": "¿Eliminar usuario?",
 	"account.delete_user_warning": "¿Seguro que quieres eliminar el usuario {{ username }}?",
 	"account.enhanced_model": "Modelo mejorado",
 	"account.full_name": "Nombre y Apellidos",
@@ -29,7 +29,7 @@
 	"account.nua_key_activity": "Registro de actividad",
 	"account.nua_key_activity_subtitle": "TODO",
 	"account.nua_key_activity_title": "TODO",
-	"account.nua_key_delete": "Eliminar la clave API de comprensión de Nuccia",
+	"account.nua_key_delete": "Eliminar la clave de la Nuclia Understanding API",
 	"account.nua_key_delete_warning": "Al eliminar esta clave, se perderán todos los trabajos en curso (si los hay).",
 	"account.nua_webhook": "Webhook URL",
 	"account.nua_webhook.help": "Una vez que se procesan sus datos, el resultado se publica en esta URL",
@@ -403,7 +403,7 @@
 	"stash.create": "Crea una caja de conocimiento",
 	"stash.create.error": "Perdon, alguna cosa pasó mal cuando creabamos la caja de conocimiento. Por favor vuelve a intentarlo.",
 	"stash.create.failure": "Lo siento, definitivamente algo anda mal en este momento. Por favor, póngase en contacto con su administrador.",
-	"stash.create.in_progress": "Creación de cuadro de conocimiento en curso...",
+	"stash.create.in_progress": "Creación de la caja de conocimiento en curso...",
 	"stash.create.zone_description": "Elige la zona y el proveedor de procesamiento que quieres utilizar para esta caja de conocimiento. De forma predeterminada aparece la zona escogida en el Account",
 	"stash.create_service_access": "Crea un nuevo Service Access",
 	"stash.delete.delete": "¿Eliminar caja de conocimiento?",
