display announce from github.com/nuclia/status

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -110,6 +110,7 @@
 	"generic.alert": "Alerta!",
 	"generic.all": "Tots",
 	"generic.allow": "Permetre",
+	"generic.announce": "Informació de l'usuari",
 	"generic.back": "Enrere",
 	"generic.back_to_home": "Tornar a la Home",
 	"generic.by_relevance": "per rellevància",
