--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -110,6 +110,7 @@
 	"generic.alert": "Alerta!",
 	"generic.all": "Todos",
 	"generic.allow": "Permitir",
+	"generic.announce": "Informacion del usuario",
 	"generic.back": "Volver",
 	"generic.back_to_home": "Volver a la Home",
 	"generic.by_relevance": "por relevancia",
