--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -148,6 +148,7 @@
 	"generic.alert": "Warning! ",
 	"generic.all": "All",
 	"generic.allow": "Allow",
+	"generic.announce": "User information",
 	"generic.back": "Back",
 	"generic.back_to_accounts": "Back to Accounts",
 	"generic.back_to_home": "Back to Homepage",
