--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -501,7 +501,7 @@
 	"upload.select_file": "Arrossegueu els fitxers o feu clic aquí",
 	"upload.takes_time": "Nuclia necessita una estona per a processar els fitxers.",
 	"upload.uploading_queue": "Cua de pujades",
-	"upload.use_folder_as_labels.help": "La carpeta de primer nivell és el nom del conjunt d'etiquetes, les subcarpetes són etiquetes. Si les subcarpetes estan imbricades, els fitxers tindran diverses etiquetes.",
+	"upload.use_folder_as_labels.help": "La carpeta de primer nivell és el nom del conjunt d'etiquetes, les subcarpetes són etiquetes. Si les subcarpetes estan imbricades, els fitxers tindran diverses etiquetes. Les etiquetes es crearan automàticament si encara no estan definides al caixa de coneixement.",
 	"upload.use_folder_as_labels.label": "Utilitzeu noms de carpetes com a etiquetes",
 	"user.logout": "Sortir",
 	"validation.email": "Introdueix un correu electrònic vàlid",
