--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -501,7 +501,7 @@
 	"upload.select_file": "Arrastre sus archivos o haga clic aquí",
 	"upload.takes_time": "Nuclia necesita un rato para procesar los archivos.",
 	"upload.uploading_queue": "Cola de subidas",
-	"upload.use_folder_as_labels.help": "La carpeta de primer nivel es el nombre del conjunto de etiquetas, las subcarpetas son etiquetas. Si las subcarpetas están anidadas, los archivos obtendrán varias etiquetas.",
+	"upload.use_folder_as_labels.help": "La carpeta de primer nivel es el nombre del conjunto de etiquetas, las subcarpetas son etiquetas. Si las subcarpetas están anidadas, los archivos obtendrán varias etiquetas. Las etiquetas se crearán automáticamente si aún no están definidas en la caja de conocimiento.",
 	"upload.use_folder_as_labels.label": "Usar nombres de carpetas como etiquetas",
 	"user.logout": "Salir",
 	"validation.email": "Introduce un correo electrónico válido",
