[sc-2314] Add a delete account action UI

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -11,6 +11,10 @@
 	"account.consuming": "Processament",
 	"account.create_new_db": "Crear nou compte Nuclia DB",
 	"account.db_zone_description": "Escull la zona i el proveïdor de processament que vols fer servir per aquesta compte. De forma predeterminada apareix la zona escollida a l’Account",
+	"account.delete.error": "S'ha produït un error al eliminar el compte",
+	"account.delete_account": "Eliminar compte",
+	"account.delete_account_confirm": "Estas segur que vols eliminar el compte {{account}} i totes les dades que conté ?",
+	"account.delete_account_confirm_title": "Eliminar el compte?",
 	"account.delete_user": "Vols suprimir l'usuari?",
 	"account.delete_user_warning": "Segur que vols eliminar l'usuari {{ username }}?",
 	"account.enhanced_model": "Model millorat",
