--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -11,6 +11,10 @@
 	"account.consuming": "Procesamiento",
 	"account.create_new_db": "Crear nueva cuenta de Nuclia DB",
 	"account.db_zone_description": "Elige la zona y el proveedor de procesamiento que quieres utilizar para esta cuenta. De forma predeterminada aparece la zona escogida en el Account",
+	"account.delete.error": "Se ha producido un error al eliminar la cuenta",
+	"account.delete_account": "Eliminar cuenta",
+	"account.delete_account_confirm": "Estas seguro que quieres elimina la cuenta {{account}} y todos los datos que contiene ?",
+	"account.delete_account_confirm_title": "Eliminar la cuenta?",
 	"account.delete_user": "¿Eliminar usuario?",
 	"account.delete_user_warning": "¿Seguro que quieres eliminar el usuario {{ username }}?",
 	"account.enhanced_model": "Modelo mejorado",
