Fix translation typo + add thumbnail upload translations

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -264,7 +264,7 @@
 	"modal.upload.success": "Fitxer pujat correctament",
 	"modal.upload.title": "Puja els teus fitxers",
 	"modal.upload_folder": "Afegeix una carpeta",
-	"ontology.add_ontology": "Afegir etiquetas",
+	"ontology.add_ontology": "Afegir etiquetes",
 	"ontology.customize_classification": "Personalitza la classificació.",
 	"ontology.delete_confirm_title": "Eliminar la classificació?",
 	"ontology.delete_warning": "Si elimines aquesta família d'etiquetes, perdràs tota la classificació existent",
@@ -377,6 +377,7 @@
 	"resource.summary": "Resum",
 	"resource.text": "Text",
 	"resource.textplaceholder": "Escriu aquí ",
+	"resource.thumbnail.drop": "Deixeu la imatge o feu clic aquí",
 	"resource.title": "Títol del recurs",
 	"resource.title_id": "Títol / ID",
 	"resource.total": "Total",
@@ -457,6 +458,7 @@
 	"stash.service_access": "Service Access",
 	"stash.service_access_description": "Important! Copia i guarda el codi del Token. Un cop afegit, desapareixerà. ",
 	"stash.settings": "Preferències de la caixa de coneixament",
+	"stash.settings.processes.training.agreement": "Accepto els càrrecs incorreguts en seleccionar aquesta opció",
 	"stash.settings.processes.training.all_labelsets": "Totes les etiquetes",
 	"stash.settings.processes.training.select-labelsets": "Tria les etiquetes",
 	"stash.side.activity": "Registre d'activitat",
