--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -447,6 +447,7 @@
 	"resource.text": "Text",
 	"resource.textplaceholder": "Write here",
 	"resource.thumbnail": "Thumbnail",
+	"resource.thumbnail.drop": "Drop image or click here",
 	"resource.thumbnail.help": "Upload an image or choose from proposals",
 	"resource.title": "Resource title",
 	"resource.title_id": "Title / ID",
@@ -548,7 +549,7 @@
 	"stash.settings.processes.labeller": " Automatic labeller training",
 	"stash.settings.processes.labeller.info": "In order to label automatically sentences, paragraph or resources; existing contents have to be labelled. As more contents are labelled, better will be the training. You can create new labels and classifications in the ontology page. ",
 	"stash.settings.processes.training.active": "There is an active training that you can stop at any time. You will receive an email when it is complete.",
-	"stash.settings.processes.training.agreement": "I accept the consumption of the required hours",
+	"stash.settings.processes.training.agreement": "I accept the charges incurred by selecting this option",
 	"stash.settings.processes.training.all_labelsets": "All label sets",
 	"stash.settings.processes.training.last_run": "Last run: {{ runDate }}",
 	"stash.settings.processes.training.not-allowed": "The training feature is not available on basic accounts.",
