--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -377,6 +377,7 @@
 	"resource.summary": "Resumen",
 	"resource.text": "Texto",
 	"resource.textplaceholder": "Escribe aquí",
+	"resource.thumbnail.drop": "Suelte la imagen o haga clic aquí",
 	"resource.title": "Título del recurso",
 	"resource.title_id": "Título / ID",
 	"resource.total": "Total",
@@ -457,6 +458,7 @@
 	"stash.service_access": "Service Access",
 	"stash.service_access_description": "¡Importante! Copia y guarda el código del Token. Una vez añadido, desaparecerá.",
 	"stash.settings": "Preferencias de la caja de conocimiento",
+	"stash.settings.processes.training.agreement": "Acepto los cargos incurridos al seleccionar esta opción",
 	"stash.settings.processes.training.all_labelsets": "Todas las etiquetas",
 	"stash.settings.processes.training.select-labelsets": "Escoge las etiquetas",
 	"stash.side.activity": "Registro de actividad",
