Add option to delete user

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -13,9 +13,10 @@
 	"account.db_zone_description": "Escull la zona i el proveïdor de processament que vols fer servir per aquesta compte. De forma predeterminada apareix la zona escollida a l’Account",
 	"account.delete.error": "S'ha produït un error al eliminar el compte",
 	"account.delete_account": "Eliminar compte",
-	"account.delete_account_confirm": "Estas segur que vols eliminar el compte {{account}} i totes les dades que conté ?",
+	"account.delete_account_confirm": "Vull eliminar el compte {{account}} i totes les dades que conté.",
 	"account.delete_account_confirm_title": "Eliminar el compte?",
 	"account.delete_user": "Vols suprimir l'usuari?",
+	"account.delete_user_confirm": "Vols eliminar el teu usuari i l'accés a Nuclia ?",
 	"account.delete_user_warning": "Segur que vols eliminar l'usuari {{ username }}?",
 	"account.enhanced_model": "Model millorat",
 	"account.full_name": "Nom i Cognoms",
@@ -159,6 +160,7 @@
 	"generic.name_entity": "Concepte clau",
 	"generic.next": "Següent",
 	"generic.next_step": "Següent pas",
+	"generic.no": "No",
 	"generic.no_results": "No hem trobat resultats :(",
 	"generic.no_results_for": "No s'han trobat resultats per",
 	"generic.nuclia_db": "Nuclia DB",
@@ -201,6 +203,7 @@
 	"generic.users": "Usuaris",
 	"generic.verify": "Verificar",
 	"generic.warning": "Avís!",
+	"generic.yes": "Sí",
 	"generic.zone": "Zona de processament",
 	"generic.zone_and_provider": "Zona i proveïdor de processament",
 	"input.placeholder": "La teva cerca",
