--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -15,13 +15,14 @@
 	"account.db_zone_description": "Please, select the zone and the processing provider you would like to use for this account (default to the account's zone)",
 	"account.delete.error": "Error when deleting the account",
 	"account.delete_account": "Delete account",
-	"account.delete_account_confirm": "Are you sure you want to delete the {{account}} account and all the data on it?",
+	"account.delete_account_confirm": "I want to delete the  {{account}} account and all the data on it.",
 	"account.delete_account_confirm_title": "Delete the account?",
 	"account.delete_account_warning_1": "Deleting the Account {{account}} will lose all existing data",
 	"account.delete_account_warning_2": "the account and any data of its configuration, users and roles assignment",
 	"account.delete_account_warning_3": "any knowledge box and all its data. Including data indexed in NucliaDB",
 	"account.delete_account_warning_4": "any trained model of any knowledge box",
 	"account.delete_user": "Delete user?",
+	"account.delete_user_confirm": "Do you want to delete your user and the access to Nuclia?",
 	"account.delete_user_warning": "Are you sure you want to delete user {{ username }}?",
 	"account.edit_nua_key": "Edit Nuclia understanding API key ",
 	"account.email_info": "Contact email associated with the key",
@@ -205,6 +206,7 @@
 	"generic.name_entity": "Insight",
 	"generic.next": "Next",
 	"generic.next_step": "Next step",
+	"generic.no": "No",
 	"generic.no_results": "We didn't find any results :(",
 	"generic.no_results_for": "No results found for",
 	"generic.nuclia_db": "Nuclia DB",
@@ -248,6 +250,7 @@
 	"generic.users": "Users",
 	"generic.verify": "Verify",
 	"generic.warning": "Warning!",
+	"generic.yes": "Yes",
 	"generic.zone": "Processing zone",
 	"generic.zone_and_provider": "Provider and processing zone",
 	"input.placeholder": "Search",
