--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -13,9 +13,10 @@
 	"account.db_zone_description": "Elige la zona y el proveedor de procesamiento que quieres utilizar para esta cuenta. De forma predeterminada aparece la zona escogida en el Account",
 	"account.delete.error": "Se ha producido un error al eliminar la cuenta",
 	"account.delete_account": "Eliminar cuenta",
-	"account.delete_account_confirm": "Estas seguro que quieres elimina la cuenta {{account}} y todos los datos que contiene ?",
+	"account.delete_account_confirm": "Quiero eliminar la cuenta {{account}} y todos los datos que contiene.",
 	"account.delete_account_confirm_title": "Eliminar la cuenta?",
 	"account.delete_user": "¿Eliminar usuario?",
+	"account.delete_user_confirm": "Quieres eliminar tu usuario y el acceso a Nuclia ?",
 	"account.delete_user_warning": "¿Seguro que quieres eliminar el usuario {{ username }}?",
 	"account.enhanced_model": "Modelo mejorado",
 	"account.full_name": "Nombre y Apellidos",
@@ -159,6 +160,7 @@
 	"generic.name_entity": "Concepto clave",
 	"generic.next": "Siguiente",
 	"generic.next_step": "Siguiente paso",
+	"generic.no": "No",
 	"generic.no_results": "No hemos encontrado resultados :(",
 	"generic.no_results_for": "No se han encontrado resultados para",
 	"generic.nuclia_db": "Nuclia DB",
@@ -201,6 +203,7 @@
 	"generic.users": "Usuarios",
 	"generic.verify": "Verificar",
 	"generic.warning": "¡Aviso!",
+	"generic.yes": "Sí",
 	"generic.zone": "Zona de procesamiento",
 	"generic.zone_and_provider": "Zona y proveedor de procesamiento",
 	"input.placeholder": "Tu búsqueda",
